# lifegence-business

./: README.md  pyproject.toml  setup.py
.github/workflows/: e2e.yml
docs/: configuration.md  modules.md  setup.md  troubleshooting.md
docs/ja/: configuration.md  modules.md  setup.md  troubleshooting.md
e2e/: Makefile  package-lock.json  package.json
e2e/tests/01-auth/: login.spec.ts
e2e/tests/02-core/: api-business.spec.ts
e2e/tests/99-coverage/: legacy-desk-redirect.spec.ts  orphan-doctype.spec.ts
lifegence_business/: hooks.py  install.py  modules.txt
lifegence_business/audit/api/: audit.py  audit_agent.py  corrective_action.py  finding.py  risk.py
lifegence_business/audit/desktop_icon/: audit.json
lifegence_business/audit/fixtures/: custom_role.json
lifegence_business/audit/services/: corrective_action_service.py  risk_service.py
lifegence_business/audit/tests/: test_api.py  test_audit_engagement.py  test_audit_finding.py  test_audit_plan.py  test_control_activity.py  test_corrective_action.py  test_risk_assessment.py  test_risk_register.py
lifegence_business/budget/: utils.py
lifegence_business/budget/api/: budget_actual.py  budget_agent.py  budget_plan.py  forecast.py
lifegence_business/budget/desktop_icon/: budget.json
lifegence_business/budget/fixtures/: custom_role.json
lifegence_business/budget/tests/: test_budget_api.py  test_budget_availability.py  (+5 more)
lifegence_business/compliance/: commands.py
lifegence_business/desktop_icon/: contract_approval.json  dms.json  lifegence_business.json
lifegence_business/translations/: ja.csv
(+184 files in other folders)
